# elgato-gchd

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  Makefile  README.md  commands.c  commands.h  common.h  elgato-gchd.c  elgato-gchd.cpp  init.c  init.h  init_1080p.c  init_1080p.h  init_576i.c  init_576i.h  init_720p.c  init_720p.h  init_component_1080i.c  init_component_1080i.h  init_component_1080p.c  init_component_1080p.h  init_component_576p.c  init_component_576p.h  init_component_720p.c  init_component_720p.h  remove.c  remove.h  uninit.c  uninit.h
src/: CMakeLists.txt  disk.cpp  disk.hpp  fifo.cpp  fifo.hpp  gchd.cpp  gchd.hpp  gchd_hardware.hpp  main.cpp  process.cpp  process.hpp  socket.cpp  socket.hpp  streamer.cpp  streamer.hpp  utility.cpp  utility.hpp
src/core/: commands.cpp  configure.cpp  configure_1080p.cpp  configure_576i.cpp  configure_720p.cpp  configure_component_1080i.cpp  configure_component_1080p.cpp  configure_component_576p.cpp  configure_component_720p.cpp  gchd.cpp  gchd.hpp  settings.cpp  settings.hpp
src/gchd/: commands.cpp  configure.cpp  configure_1080p.cpp  configure_1080p_rgb.cpp  configure_576i.cpp  configure_720p.cpp  configure_720p_rgb.cpp  configure_component.cpp  configure_component_1080i.cpp  configure_component_1080p.cpp  configure_component_480p.cpp  configure_component_576p.cpp  configure_component_720p.cpp  configure_composite.cpp  configure_composite_480i.cpp  configure_composite_576i.cpp  configure_hdmi.cpp  configure_hdmi_1080p.cpp  configure_hdmi_1080p_rgb.cpp  configure_hdmi_720p.cpp  configure_hdmi_720p_rgb.cpp  (+18 more)
(+16 files in other folders)
