FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(LIBUSB libusb-1.0 REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} ROOT_SRC)
AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/core" CORE_SRC)
LIST(APPEND SOURCE_LIST ${ROOT_SRC} ${CORE_SRC})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdc++ ${LIBUSB_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
