FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)

IF(Qt5Core_FOUND AND Qt5Widgets_FOUND)
	SET(CMAKE_AUTOMOC ON)
	SET(CMAKE_AUTOUIC ON)
	SET(CMAKE_INCLUDE_CURRENT_DIR ON)

	AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} GUI_SRC)

	ADD_EXECUTABLE("q${PROJECT_NAME}" ${GUI_SRC})
	TARGET_LINK_LIBRARIES("q${PROJECT_NAME}" stdc++ ${LIBUSB_LIBRARIES} Qt5::Core Qt5::Widgets)

	INSTALL(TARGETS "q${PROJECT_NAME}" DESTINATION bin)
ENDIF()
