FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)

IF(Qt5Core_FOUND AND Qt5Widgets_FOUND)
	SET(CMAKE_AUTOMOC ON)
	SET(CMAKE_INCLUDE_CURRENT_DIR ON)

	AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} GUI_SRC)

	QT5_WRAP_UI(UI_SRC widget.ui)
	QT5_ADD_RESOURCES(RES_SRC resource.qrc)

	ADD_EXECUTABLE("q${PROJECT_NAME}" ${GUI_SRC} ${UI_SRC} ${RES_SRC})
	TARGET_LINK_LIBRARIES("q${PROJECT_NAME}" stdc++ ${LIBUSB_LIBRARIES} Qt5::Core Qt5::Widgets)

	INSTALL(TARGETS "q${PROJECT_NAME}" DESTINATION bin)
ENDIF()
